<resources>
    <string name="app_name">iphoto plus</string>
    <string name="companyName">上海瞩亦科技有限公司 </string>
    <string name="launcher_label">RYC USB</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="home">首页</string>
    <string name="live">直播</string>
    <string name="mine">我的</string>
    <!-- session -->
    <string name="focus">Focus</string>
    <string name="capture">Capture</string>
    <string name="continue_liveview">Continue</string>

    <!-- property grid -->
    <string name="af_label">AF</string>
    <string name="hide">Hide</string>

    <!-- menu -->
    <string name="menu_feedback">Give Feedback</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_changelog">Changelog</string>
    <string name="menu_help">Help</string>

    <!-- about dialog -->
    <string name="about_dialog_version">Version %1$s</string>
    <string name="about_dialog_copyright">Copyright \u00A9 2011 Nils Assbeck and Michael Z\u00F6ch</string>
    <string name="about_dialog_message">Remote Your Cam USB allows you to control your Canon DSLR camera via USB directly form your Android tablet.</string>

    <!-- feedback dialog -->
    <string name="feedback_dialog_title">Help us improve RYC USB</string>
    <string name="feedback_dialog_message">Want to help improving RYC USB? Then please give us feedback by sending us device information of your camera. Click the "Ok" button to open your preferred Email application.</string>

    <!-- no camera dialog -->
    <string name="dialog_no_camera_title">No camera found!</string>
    <string name="dialog_no_camera_message">No compatible Canon or Nikon camera found. Is your camera connected via USB?</string>

    <!-- changelog dialog -->
    <string name="whats_new">What\'s New</string>

    <!-- worker notification -->
    <string name="worker_ticker">RYC is running</string>
    <string name="worker_content_title">@string/launcher_label</string>
    <string name="worker_content_text">Is running!</string>

    <!-- gallery -->
    <string name="gallery_reverse_sort_order">Reverse sort order</string>
    <string name="gallery_empty">No pictures found</string>
    <string name="gallery_loading">Loading ...</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="gallery_no_camera_connected">No camera connected</string>

    <!-- settings -->
    <string name="activity_app_settings_title">Settings</string>
    <string name="pref_category_liveview_title">Live View</string>
    <string name="pref_captured_picture_duration_label">Show captured picture</string>
    <string name="pref_captured_picture_duration_summary">Seconds a captured picture is displayed during Live View</string>
    <string name="pref_category_picturestream_title">Picture Stream</string>
    <string name="pref_picturestream_num_pictures_label">Number of pictures</string>
    <string name="pref_picturestream_num_pictures_summary">Number of pictures to display in stream. Use lower number if memory is an issue.</string>
    <string name="pref_picturestream_show_filename_label">Filename</string>
    <string name="pref_picturestream_show_filename_summary">Show filename in bottom right corner</string>
    <string name="pref_category_memory_title">Memory constraints</string>
    <string name="pref_memory_picture_size_label">Picture size</string>
    <string name="pref_memory_picture_size_summary">Size of captured pictures in Live View and Gallery</string>

    <!-- acra -->
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">RYC USB has crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">RYC USB has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click \'OK\'.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below or add your email address so we can contact:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>


    <string-array name="home_tab_key">
        <item>全部</item>
        <item>婚礼</item>
        <item>旅拍</item>
        <item>会务活动</item>
        <item>体育赛事</item>
        <item>商务合作</item>
        <item>楼房地产</item>
        <item>娱乐演出</item>
        <item>年会晚会</item>
    </string-array>

    <string-array name="list_type">
        <item>Pending</item>
        <item>Ongoing</item>
        <item>Over</item>
    </string-array>

    <string-array name="list_cn_type">
        <item>未开始</item>
        <item>进行中</item>
        <item>已结束</item>
    </string-array>

    <string-array name="home_tab_value">
        <item>全部</item>
        <item>生日婚庆</item>
        <item>旅拍</item>
        <item>峰会论坛,交流分享会,发布会,开闭幕式,讲座路演,党建政务</item>
        <item>竞赛</item>
        <item>峰会论坛,交流分享会,讲座路演</item>
        <item>房产业</item>
        <item>演出,娱乐派对</item>
        <item>年会,宴会庆典</item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice">1.请将相机待机时间设置为最长\n2.请将相机的拍摄时间设置为互联网时间\n3.请将相机的FTP自动传输设置为关闭\n4.相机如有wifi功能，请关闭\n5.首次连接数据线时，根据提示窗指示，同意给邀拍云摄影授权</string>
    <string name="tips">提示</string>
    <string name="tips_content">设备已断开连接，请重新连接</string>
    <string name="speed">网速</string>
    <string name="mode">方式</string>

    <string name="input_phoneNo">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_set_password">请输入6-12位字母或数字</string>
    <string name="phoneNo">手机号</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="iphoto_plus">iPhoto.plus</string>

</resources>