<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".components.activity.RegisterActivity">

    <include
        android:id="@+id/include_login"
        layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="96dp"
        android:text="@string/iphoto_plus"
        android:textColor="@color/ip_blue"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="120dp"
        android:hint="@string/input_phoneNo"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="11"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/input_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingStart="10dp"
            android:textColor="@color/dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_sendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/et_code"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/get_code"
            android:textColor="@color/ip_blue"
            android:textSize="14sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/input_nickname"
        android:imeOptions="actionDone"
        android:lines="1"
        android:maxLength="10"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/input_set_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/drawable_login_btn_bg"
        android:gravity="center"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />


    <TextView
        android:id="@+id/tv_goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:text="有账号？去登陆"
        android:textColor="@color/ip_blue"
        android:textSize="12sp" />


</LinearLayout>