<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".components.activity.LoginActivity">

    <include
        android:id="@+id/include_login"
        layout="@layout/toolbar_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_marginTop="96dp"
        android:textColor="@color/ip_blue"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/iphoto_plus"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/input_phoneNo"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="11"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/et_pwd"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:lines="1"
        android:paddingStart="10dp"
        android:textColor="@color/dark"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:background="@drawable/drawable_login_btn_bg"
        android:text="登录"
        android:gravity="center"
        android:textSize="@dimen/sp_14"
        android:layout_marginHorizontal="24dp"
        android:textColor="@color/white" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp">
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="注册"
            android:textColor="@color/ip_blue"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="忘记密码？"
            android:layout_alignParentEnd="true"
            android:textColor="@color/ip_1C1F23"
            android:textSize="12sp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <TextView
                android:id="@+id/tv_countryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:text="+86▼"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/code"
                android:textColor="@color/dark"
                android:textSize="17sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_code">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="160dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="50dp"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textColor="@color/dark"
                    android:textSize="14sp"
                    tools:ignore="Autofill,LabelFor,RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_sendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/et_code"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/get_code"
                    android:textColor="@color/ip_blue"
                    android:textSize="14sp" />
            </RelativeLayout>


        </RelativeLayout>





    </LinearLayout>


</LinearLayout>